--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 				><i class="fa fa-newspaper-o "></i> | News</a
 			>
 			<a href="#"  class="link" onclick="openPage('Jobs' , this, 'skyblue')"
-				><i class="fa fa-users"></i> | Jobs</a
+				><i class="fa fa-briefcase "></i> | Jobs</a
 			>
 			<a href="#"  class="link" onclick="openPage('Community' , this, 'skyblue')"
 				><i class="fa fa-users"></i> | Community</a
 			>
 			<a href="#"  class="link" onclick="openPage('Server' , this, 'skyblue')"
-				><i class="fa fa-server "></i> | Server</a
+				><i class="fa fa-server "></i> | API</a
 			>			
 			<a  href="#" class="link" onclick="openPage('About' , this, 'skyblue')"
 				><i class="fa fa-support"></i> | About</a
@@ -74,7 +74,7 @@
 					class="link"
 					onclick="openPage('Server' , this, 'skyblue')"
 				>
-					<i class="fa fa-server "></i> | Server</button
+					<i class="fa fa-server "></i> | API</button
 				>
 				<button
 					href="#"
@@ -88,7 +88,7 @@
 					class="link"
 					onclick="openPage('Jobs' , this,  'skyblue')"
 				>
-					<i class="fa fa-users "></i> | Jobs</button
+					<i class="fa fa-briefcase "></i> | Jobs</button
 				>
 				<button
 					href="#"
@@ -107,6 +107,8 @@
             </div>
 		<div class="heading section has-text-centered">
 		<p class="title has-text-white"> True Blue Creative Works inc.&trade;</p>
+
+
 
             </header>
             <main class="has-text-centered">
@@ -129,7 +131,9 @@
    <p class="subtitle has-text-white"> Status : <span class='is_UnderConstruction'> &bull; Under Construction</span></p>
    <p class="subtitle has-text-white"> UpTime :  <span id='SH_Uptime' class="subtitle has-text-white"></span></p>
    <p class="subtitle has-text-white"> Desc: Our status report page as well as a few other key services is currently under constuction. some data may not be entirely time accurate furthermore Styles and Web Api are not fully integrated yet. we are working on this and will continue to alert you of any upcoming changes.</p>
+		
 </div>
+
 
 <div class="box">
 	<svg viewBox="0 0 1023 83" color=white enable-background="new 0 0 1023 83" xml:space="preserve">
@@ -450,7 +454,16 @@
    <p class="subtitle has-text-white"> UpTime :  <span id='SH_Uptime' class="subtitle has-text-white"></span></p>
    <p class="subtitle has-text-white"> Desc: We are currently obtaining the parts to build our own data servers, though we haven't begun construction yet, they are expected to be completed soon.</p>
  </center>
+
+
 				</div>
+				 <!-- Create the canvas element the game draws to -->
+<canvas id="canvas" width="1080" height ="720">
+	<p>Your browser doesn't support HTML5 canvas.</p>
+</canvas>
+
+<!-- Run the game code -->
+<script type="text/javascript" src="html5game/Digi_Clock.js?RBOAC=69072871"></script>
 				</div>
 			</div>
 			<div id="About" class="linkcontent">
@@ -494,6 +507,8 @@
 	<div class="column">
     <a href='https://www.youtube.com/channel/UCGsZl-E9C42VZKpYXPsUjDQ/featured'><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
 	</div>
+	
+
 </div></center>
 	</div>
 
